--- a/package.json
+++ b/package.json
@@ -12,36 +12,38 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "next": "^14.2.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "next": "^14.2.35",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
-    "@types/jest": "^29.5.11",
-    "@playwright/test": "^1.41.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.2",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.1.1"
+    "typescript": "^5.3.3"
   }
 }
